--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
+<style>
+h1{
+	font-family: hellvetica;
+}
+</style>
 	<meta charset="utf-8">
 	<title>3Pitches</title>
 </head>
@@ -20,21 +24,4 @@
 	
 </body>
 </html>
-=======
-	<title>Breaking News Exercise</title>
-	<script src="js/jquery-2.0.2.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
-
-</head>
-<body>
-	<div class="container">
-		<h1>Unemployment Rates: ND vs National average over the last 13 years</h1>
-		<img src="img/plot.jpg" class="img-responsive">
-	</div>
-	
-</body>
-</html>
->>>>>>> 44eda96da470501cb213a51ec4d8133d292387c4
