--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-h1{
-	font-family: hellvetica;
-}
+<style type="text/css">
+
+p, h1, h3{font-family: arial;}
+
+
 </style>
 	<meta charset="utf-8">
 	<title>3Pitches</title>
@@ -19,7 +20,7 @@ h1{
 	<p>I realize this pitch is more of a long shot, but I think it could be a cool story if it somehow worked out. I propose finding utility data for Oakland rate payers. I came across  information for Oakland utility meter locations and addresses on the Code for Oakland site. I would, in addition, need to find out how much energy each of these meters (residences/businesses/etc.) registers. How much, per household or business, every rate payer uses in Oakland. Then, I want to pull the Calif. Secretary of State business licenses for legalized medical marijuana growers in Oakland, of which includes their addresses. I  want to compare the amount of energy these residence use in compared to the number of plants that they are allowed to legally grow. I would need to interview someone -- a horticulturist or marijuana advocate -- about the approximate amount of electricity needed to grow, on average, a specific number of plants. And then you could see whether any of these businesses use double or triple the amount of energy as compared to the number of plants they are lawfully allowed to grow under their business license. Obviously there are other factors that could come in to play -- energy efficiency of the house, number of residence occupying the residence, so on and so forth. What I do know is that medical marijuana operations use an enormous amount of electricity. I don't know what you'd find but I think it would be a fun exercise regardless.</p> 
 		
 		
-		<p>Much of the data I may need, I believe, is located on the <a href="http://codeforoakland.org/data-sets/"> Code for Oakland site </a> Otherwise, I plan to track down PR folks at government agencies. Also, San Francisco has an open data portal. I believe you I could pitch these stories to a number of different news outlets... from bicycle blogs to legacy news outlets in the Bay Area.</p>
+		<p>Much of the data I may need, I believe, is located on the <a href="http://codeforoakland.org/data-sets/"> Code for Oakland site </a> Otherwise, I plan to track down PR folks at government agencies. Also, San Francisco has an open data portal. I believe I could pitch these stories to a number of different news outlets... from bicycle blogs to legacy news outlets in the Bay Area.</p>
 	
 	
 </body>
